styles/styles.css
body, input, button {
    font-size: 14px;
    font-family: Roboto,arial,sans-serif;
    color: #222;
}

body, html {
    height: 100%;
    margin: 0;
    padding: 0;
}
html, body {
    min-width: 400px;
}

body {
    background: gainsboro;
}
body {
    display: block;
}


#google_logo {
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
    object-position: center bottom;
    width: auto;
    position: relative;
    top: 100px;
    height: 92px;
    aspect-ratio: auto 272 / 92;
    width: 272px;
}

#morgan {
    width:auto;
    height: auto;
    border-radius: 50%;
    position:relative;
    left: 800px;
    
}

#gmail {
    position:relative;
    left: 800px;

}
#images {
    position:relative;
    left: 800px;

}




.whole {
    display: flex;
    flex-direction: column;
    height: 100%;
}

div {
    display:block;
}

.topbar {
    display: flex;
    align-items: center;
    padding: 6px;
}

a.topbarlinks:first-of-type {
    margin-left: 15px;
}
a.topbarlinks {
    display: inline-block;
    padding: 5px;
    margin: 0 5px;
    color: #222;
    text-decoration:none;
}

.toprightbox {
   float:right;
   left: 150px;
}

style {
    display: none;
}

.spacebetweentop {
    display: inline-block;
    flex-grow: 1;
}

.spacebetweentop {
    min-width: initial;
    min-width: auto;
}

#topper {
    height: 48px;
    font: 13px/27px Roboto,RobotoDraft,Arial,sans-serif;
    z-index: 986;

}

.spacebetweentop {
    color: black;
    min-width: 320px;
    position: relative;
    -webkit-transition: box-shadow 250ms;
    transition: box-shadow 250ms;
}

